# llm_on_edge

./: .gitignore  README.md  check_xcode_files.sh  requirements.txt
apple/: README.md
apple/Application/: ContentView.swift  ImagePicker.swift  LogView.swift  Message.swift  MessageListView.swift  MessageView.swift  SpeechRecognitionManager.swift
apple/Entitlements/: AppMac.entitlements
apple/SupportingFiles/: Info.plist
apple/etLLM.xcodeproj/: project.pbxproj
export_to_exectorch/: .gitignore  qwen3_to_pt.ipynb  requirements.txt
export_to_executorch/: download_qwen.sh  export_qwen35.sh  export_qwen_0.6b.sh  export_qwen_8b.sh  validate.py
optimum-executorch/: CONTRIBUTING.MD  Makefile  README.md  install_dev.py  pyproject.toml
optimum-executorch/.github/workflows/: build_documentation.yml  build_pr_documentation.yml  quality.yml  test_models.yml  upload_pr_documentation.yml
optimum-executorch/docs/source/: _toctree.yml  index.mdx  installation.mdx  quickstart.mdx
optimum-executorch/docs/source/guides/: contribute.mdx  export.mdx
optimum-executorch/optimum/commands/export/: executorch.py
optimum-executorch/optimum/commands/register/: register_export.py
optimum-executorch/tests/: utils.py
optimum-executorch/tests/models/: test_modeling_albert.py  test_modeling_bert.py  test_modeling_codegen.py  test_modeling_common.py  test_modeling_cvt.py  test_modeling_deit.py  test_modeling_detr.py  test_modeling_distilbert.py  test_modeling_dit.py  test_modeling_efficientnet.py  test_modeling_focalnet.py  test_modeling_gemma.py  test_modeling_gemma2.py  test_modeling_gemma3.py  test_modeling_glm.py  test_modeling_gpt2.py  test_modeling_gptj.py  test_modeling_gptneox.py  test_modeling_gptneoxjapanese.py  test_modeling_granite.py  test_modeling_granite_speech.py  test_modeling_llama.py  test_modeling_mistral.py  test_modeling_mobilevit.py  test_modeling_mobilevit2.py  test_modeling_olmo.py  test_modeling_phi.py  test_modeling_phi4.py  test_modeling_pvt.py  test_modeling_qwen2.py  test_modeling_qwen3.py  test_modeling_qwen3_embedding.py  test_modeling_roberta.py  test_modeling_smollm.py  test_modeling_smollm3.py  test_modeling_starcoder2.py  test_modeling_swin.py  test_modeling_t5.py  test_modeling_vit.py  test_modeling_voxtral.py  (+1 more)
plans/: application.md  application_v2.md  application_v3.md  contentview_arch.md  model_path.md  voice-input-whisperkit.md
plans/done/: finish.md
plans/issues/: qwen_tts_export.md  run_macos_app.md  tts-not-speaking.md  tts-simulator-crash.md  ttskit_integration.md  (+1 more)
test/: app.swift  test_optimum_executorch.py
(+18 files in other folders)
